# sp1-llzk

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
.github/workflows/: ci.yml
air/: Cargo.toml
air-llzk/: Cargo.toml
air-llzk/examples/: add_chip_to_picus.rs
air-llzk/src/: air.rs  codegen.rs  field.rs  helpers.rs  lib.rs  output.rs  vars.rs
air-llzk/src/value/: ext_felt.rs  felt.rs  mod.rs
air-llzk/src/vars/: ext_felt.rs  felt.rs  mod.rs
air-llzk/tests/: add.rs  add4.rs  add5.rs  and.rs  is_equal_word.rs  is_zero.rs  is_zero_word.rs
air-llzk/tests/chips/: add.rs  add4.rs  add5.rs  and.rs  is_equal_word.rs  is_zero.rs  is_zero_word.rs  mod.rs
air-llzk/tests/common/: mod.rs
air-picus/: Cargo.toml
air-picus/src/: air.rs  helpers.rs  lib.rs  picus_codegen.rs
air-picus/src/value/: ext_felt.rs  mod.rs
air-picus/src/vars/: ext_felt.rs  mod.rs
air-picus/tests/: add.rs  add4.rs  add5.rs  and.rs  fixed_rotate_right.rs  fixed_shift_right.rs  global_interaction.rs  is_equal_word.rs  is_zero.rs  is_zero_word.rs  lt.rs  or.rs  xor.rs
air-picus/tests/chips/: add.rs  add4.rs  add5.rs  and.rs  fixed_rotate_right.rs  fixed_shift_right.rs  globalinteraction.rs  is_equal_word.rs  is_zero.rs  is_zero_word.rs  lt.rs  mod.rs  or.rs  xor.rs
air-picus/tests/common/: mod.rs
air/src/: lib.rs  llzk.rs  picusextractor.rs  symbolic_expr_ef.rs  symbolic_expr_f.rs  symbolic_var_ef.rs  symbolic_var_f.rs
air/src/llzk/: babybear.rs  codegen.rs  helpers.rs  mod.rs  value.rs  vars.rs
llzk-bridge/: Cargo.toml  build.rs
llzk-bridge/bridge/: CMakeLists.txt  Dependencies.cmake
llzk-bridge/bridge/include/: CodegenState.h  CodegenStateImpl.h  OpsGen.h  Symbol.h  bridge.h
llzk-bridge/bridge/lib/: CMakeLists.txt  CodegenState.cpp  CodegenStateImpl.h  GlobalsNames.h  OpsGen.cpp  Symbol.cpp  Utils.h
llzk-bridge/src/: lib.rs
